gitops/base/infra/reloader.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reloader
  labels:
    app.kubernetes.io/name: reloader
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reloader
  namespace: reloader
  labels:
    app.kubernetes.io/name: reloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reloader
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reloader
    spec:
      serviceAccountName: reloader
      containers:
        - name: reloader
          image: ghcr.io/stakater/reloader:latest
          imagePullPolicy: IfNotPresent
          args:
            - --log-level=info
